pkg/kgateway/agentgatewaysyncer/testdata/outputs/http-routing-proxy.yaml
Addresses:
- service:
    hostname: bar-svc.default.svc.cluster.local
    name: bar-svc
    namespace: default
    ports:
    - servicePort: 80
- service:
    hostname: bar-svc-canary.default.svc.cluster.local
    name: bar-svc-canary
    namespace: default
    ports:
    - servicePort: 80
- service:
    hostname: example-svc.default.svc.cluster.local
    name: example-svc
    namespace: default
    ports:
    - servicePort: 80
- service:
    hostname: foo-svc.default.svc.cluster.local
    name: foo-svc
    namespace: default
    ports:
    - servicePort: 80
Binds:
- key: 80/default/example-gateway
  port: 80
Listeners:
- bindKey: 80/default/example-gateway
  key: default/example-gateway.http
  name:
    gatewayName: example-gateway
    gatewayNamespace: default
    listenerName: http
  protocol: HTTP
Routes:
- backends:
  - backend:
      port: 80
      service: default/bar-svc-canary.default.svc.cluster.local
    weight: 1
  hostnames:
  - bar.example.com
  key: default/bar-route.0.0.http
  listenerKey: default/example-gateway.http
  matches:
  - headers:
    - exact: canary
      name: env
    - exact: value-one
      name: X-Header-One
    - exact: value-two
      name: X-Header-Two
  name:
    kind: HTTPRoute
    name: bar-route
    namespace: default
- backends:
  - backend:
      port: 80
      service: default/bar-svc.default.svc.cluster.local
    weight: 1
  hostnames:
  - bar.example.com
  key: default/bar-route.1.0.http
  listenerKey: default/example-gateway.http
  name:
    kind: HTTPRoute
    name: bar-route
    namespace: default
- backends:
  - backend:
      port: 80
      service: default/example-svc.default.svc.cluster.local
    weight: 1
  hostnames:
  - example.com
  key: default/example-route.0.0.http
  listenerKey: default/example-gateway.http
  name:
    kind: HTTPRoute
    name: example-route
    namespace: default
- backends:
  - backend:
      port: 80
      service: default/foo-svc.default.svc.cluster.local
    weight: 1
  hostnames:
  - foo.example.com
  key: default/foo-route.0.0.http
  listenerKey: default/example-gateway.http
  matches:
  - path:
      pathPrefix: /login
  name:
    kind: HTTPRoute
    name: foo-route
    namespace: default
